# langchain-academy

./: pyproject.toml
module-0/: basics.ipynb
